// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should not render children if user is logged in and does not have the role 1`] = `
<div>
  <h1>
    Not Authorized
  </h1>
</div>
`;

exports[`it should render children if user is logged in 1`] = `
<div>
  <h1>
    Not Authorized
  </h1>
</div>
`;

exports[`it should render children if user is logged in and has the role 1`] = `
<div>
  <h1>
    Children
  </h1>
</div>
`;

exports[`it should return the login modal if user is not logged in 1`] = `
<div>
  <h1>
    Not Authorized
  </h1>
</div>
`;
